--- a/config/production/config.yml
+++ b/config/production/config.yml
@@ -1,3 +1,3 @@
 email_from_address: path-help@sanger.ac.uk
 email_domain: sanger.ac.uk
-qc_grind_url: http://intwebdev.sanger.ac.uk/cgi-bin/teams/pathogen/qc_grind/qc_grind.pl
+qc_grind_url: http://pathweb.internal.sanger.ac.uk:8000/cgi-bin/qc_grind.pl
