nds_change_to_dist_zilla_starter_bundle

--- a/dist.ini
+++ b/dist.ini
@@ -11,9 +11,8 @@ repository.url = https://github.com/sanger-pathogens/pipelines_reporting.git
 repository.type = git
 
 
-[@Basic]
-[AutoPrereqs]
-[PruneCruft]
+[@Starter]
 [ExtraTests]
+[AutoPrereqs]
 [AutoVersion]
 [PodWeaver]
